--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 8080
-ACCESS_TOKEN_SECRET='dsfaejhadsfkljdaslfh'
+ACCESS_TOKEN_SECRET='abc123'
 ACCESS_TOKEN_TTL = 15m
+REFRESH_TOKEN_TTL_DAYS=30
